# HistomicsUI

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt  requirements-girder5.txt  ruff.toml  setup.py  tox.ini
.circleci/: config.yml  get_version.py  publish_pypi.sh
docs/: config_options.rst  controls.rst  slicer_cli_plugins.rst
histomicsui/: __init__.py  constants.py  girder_worker_plugin.py  handlers.py  webroot.mako  wsgi.py
histomicsui/models/: aperio.py  case.py  cohort.py  image.py  meta.py  pathology.py  slide.py
histomicsui/rest/: __init__.py  aperio.py  hui_resource.py  image_browse_resource.py  system.py  tcga.py
histomicsui/web_client/: app.js  histomicsui.ts  index.html  index.js  main.js  package-lock.json  package.json  playwright.config.ts  router.js  routes.js  tailwind.config.js  vite.config.ts  webpack.helper.js
histomicsui/web_client/collections/: StyleCollection.js  (+2 more)
tests/: conftest.py  datastore.py  girder_utilities.py  test_handlers.py  test_hui_rest.py  test_image_browse_endpoints.py  test_load.py  test_tcga.py  test_web_client.py
tests/data/: sample_svs_image.TCGA-DU-6399-01A-01-TS1.e8eb65de-d63e-42db-af6f-14fefbbdf7bd.svs.sha512
tests/test_files/: .histomicsui_config.yaml  sample.anot  sample_girder_id.anot
tests/web_client_specs/: .eslintrc  analysisSpec.js  annotationSpec.js  girderUISpec.js  huiSpec.js  huiTest.js  itemSpec.js  metadataPanelSpec.js  metadataPlotSpec.js  overviewPanelSpec.js  panelLayoutSpec.js  pixelmapCategorySpec.js
(+120 files in other folders)
